cluster/core/vpn-gateway/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: vpn-gateway
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/enforce-version: latest
    goldilocks.fairwinds.com/enabled: "true"
