cluster/core/vpn-gateway/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: vpn-gateway-pod-gateway
  namespace: vpn-gateway
  labels:
    app.kubernetes.io/instance: vpn-gateway
    app.kubernetes.io/name: pod-gateway
spec:
  egress:
    - ports:
        - port: ${SECRET_VPN_PORT}
          protocol: UDP
      to:
        - ipBlock:
            cidr: 0.0.0.0/0
    - to:
        - namespaceSelector: {}
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: vpn-gateway
      app.kubernetes.io/name: pod-gateway
  policyTypes:
    - Egress
